* you can now hold ALT to use an aquatic mount while swimming in any zone
* the list of non-flyable zones is now converted to the local language upon load rather than being english-client only
* fix spell IDs are entered into lists are strings (and as such are ignored until the list is edited again)
* fix attempts to use a flying mount in certain zones even if a flying skill isn't known
* cat form is no longer supported
* vashj'ir no longer has special treatment as a swim-only zone